--- a/app/src/main/res/layout/fragment_common.xml
+++ b/app/src/main/res/layout/fragment_common.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvCommonFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="@string/app_name"/>
+        android:layout_height="wrap_content"
+        android:overScrollMode="never"/>
+
 
 </LinearLayout>
