--- a/app/src/main/res/layout/grid_insta_rowlayout.xml
+++ b/app/src/main/res/layout/grid_insta_rowlayout.xml
@@ -10,8 +10,7 @@
         android:id="@+id/ivInstaGridView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:src="@drawable/thumbnail_large"/>
+        android:adjustViewBounds="true"/>
 
 
 </RelativeLayout>
