--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,5 +23,13 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="tvBottomNavEditor">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textColor">@drawable/text_selector</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 
 </resources>
