--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:mContext="example.com.slate.MainActivity">
+    tools:mContext="example.com.slate.activity.MainActivity">
 
     <RelativeLayout
         style="@style/containerFirstScreen">
@@ -90,7 +90,8 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vpCategories"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:overScrollMode="never"/>
 
     </LinearLayout>
 
