svg rendered on canvas

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -12,10 +12,12 @@
 
 
     <LinearLayout
+        android:id="@+id/llCanvas"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.6"
-        android:background="@color/bottomNavBg"/>
+        android:background="@color/bottomNavBg"
+        android:orientation="vertical"/>
 
     <LinearLayout
         android:layout_width="match_parent"
