--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -50,4 +50,7 @@
     <dimen name="color_view_height">30dp</dimen>
 
     <dimen name="slider_height">48dp</dimen>
+
+    <dimen name="no_border_width">0dp</dimen>
+    <dimen name="border_width">2dp</dimen>
 </resources>
