--- a/app/src/main/res/layout/grid_insta_rowlayout.xml
+++ b/app/src/main/res/layout/grid_insta_rowlayout.xml
@@ -3,12 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/spacing_normal">
 
 
     <util.InstaImageView
         android:id="@+id/ivInstaGridView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"/>
 
