Font color and size is changing of individual svgs

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,5 +47,12 @@
         <item name="android:layout_height">@dimen/color_view_height</item>
     </style>
 
+    <style name="llTextEditFrag">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 
 </resources>
